--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/reset.css" />
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <title>Encript - a</title>
   </head>
   <body>
@@ -40,6 +40,6 @@
         <button id="copiar" class="app__output-copy-button hidden-output">Copiar</button>
       </div>
     </div>
-    <script src="../code/index.js"></script>
+    <script src="./code/index.js"></script>
   </body>
 </html>
