Actualizando rutas de archivos :

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         rows="10"
         placeholder="Ingrese el texto aquí"
       ></textarea>
-      <span class="alert__container"> <img class="alert-ico" src="../assets/alert-ico.png" alt="alert"> Solo letras minusculas sin acentos</span>
+      <span class="alert__container"> <img class="alert-ico" src="./assets/alert-ico.png" alt="alert"> Solo letras minusculas sin acentos</span>
       <div class="app__actions">
         <button class="app__action app__action--encrypt" id="encriptar"><h3 class="app__action-text">Encriptar</h3></button>
         <button class="app__action app__action--decrypt" id="desencriptar"><h3 class="app__action-text">Desencriptar</h3></button></button>
       </div>
       <div class="app__output">
         <div id="output-items">
-          <img class=" app__output-image" src="../assets/Muñeco.png" alt="muñeco">
+          <img class=" app__output-image" src="./assets/Muñeco.png" alt="muñeco">
           <h3 class=" app__output-title">Ningún texto fue encontrado</h3>
           <p class=" app__output-paragraph">Ingresa el texto que desees encriptar o desencriptar.</p>
         </div>
